--- a/src/components/Nav/index.css
+++ b/src/components/Nav/index.css
@@ -6,8 +6,12 @@
 }
 
 .header #logo {
-  width: 2rem;
   height: 2rem;
+}
+
+.header #menu-burger {
+  display: none;
+  height: 1rem;
 }
 
 .header nav ul {
@@ -28,4 +32,14 @@
   text-decoration: none;
   font-size: 16px;
   font-weight: 500;
+}
+
+@media screen and (max-width: 768px) {
+  .header #menu-burger {
+    display: block;
+  }
+
+  .header nav {
+    display: none;
+  }
 }
